# ckanext-editable-config

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/editable_config/: config.py  config_declaration.yaml  helpers.py  plugin.py  shared.py  views.py
ckanext/editable_config/assets/: script.js  webassets.yml
ckanext/editable_config/assets/css/: editable_config.css
ckanext/editable_config/assets/js/: editable-config-toggle-field.js
ckanext/editable_config/logic/: action.py  auth.py  schema.py
ckanext/editable_config/migration/editable_config/: alembic.ini
ckanext/editable_config/migration/editable_config/versions/: a8d116986c3f_create_editable_config_table.py
ckanext/editable_config/model/: __init__.py  option.py
ckanext/editable_config/templates/admin/: base.html
ckanext/editable_config/templates/editable_config/: config.html
ckanext/editable_config/templates/editable_config/snippets/: field.html
ckanext/editable_config/tests/: conftest.py  test_fixtures.py  test_shared.py
ckanext/editable_config/tests/logic/: test_action.py  test_schema.py
ckanext/editable_config/tests/model/: test_option.py
